# VisProbeRobustness

./: .gitignore  CHANGELOG.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  EXPERIMENT_ANALYSIS_REPORT.md  LICENSE  MANIFEST.in  README.md  REFACTORING_SUMMARY.md  ROADMAP.md  TESTING.md  autoattack_cpu_patch.py  cpu_compatible_attack.py  debug_autoattack.py  diagnose_zero_accuracy.py  example_usage.py  experiment-final.py  experiment-v2.py  notebook_epsilon_fix.py  notebook_fix.py  pilot_grid.csv  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt  setup.py  test_analysis_simple.py  test_cifar10_presets.py  test_compositional_only.py  test_imagenet_adaptive.py  test_imagenet_presets.py  test_refactored.py  two_model_comparison.py  v3.md
.claude/: CLAUDE.md
.github/workflows/: build.yml  lint.yml  refresh-leaderboard.yml  security.yml  tests.yml
docs/: README.md  api-reference.md  architecture.md  installation.md  quickstart.md  user-guide.md
examples/: README.md  accuracy_preservation_example.py  advanced_analysis_example.py  basic_example.py  cifar10_example.py  comprehensive_example.py  custom_model_example.py  perturbation_constants_example.py  plotting.ipynb  preset_comparison.py  preset_discovery_example.py  simple_api_example.py  simple_example.py  visprobe_walkthrough.ipynb
experiments/: cifar10_protection_gap.py  colab_500_samples.ipynb  colab_experiment.ipynb  colab_full_experiment.ipynb  crossmax_cifar.py  crossmax_visprobe_eval.py  test_1_natural.py  test_2_adversarial.py  test_3_compositional.py  test_4_aggregate.py
scripts/: refresh_leaderboard.py
scripts/pilot/: analyze_pilot.py  modal_runner.py  run_pilot.py
src/visprobe/: __init__.py  analysis.py  api.py  attacks.py  auto_init.py  checkpoint.py  cost.py  experiment.py  leaderboard.py  memory.py  perturbations.py  report.py  results.py  utils.py
src/visprobe/__pycache__/api/: __init__.py  analysis_utils.py  config.py  context.py  decorators.py  model_wrap.py  property_evaluator.py  query_counter.py  registry.py  report.py  report_builder.py  runner.py  search_modes.py  strategy_utils.py
src/visprobe/advanced/: __init__.py
src/visprobe/analysis/: __init__.py  crossover.py  detailed_evaluation.py  disagreement.py  statistical.py
src/visprobe/cli/: __init__.py  cli.py  dashboard.py  dashboard_helpers.py  utils.py
src/visprobe/config/: __init__.py  preset_schema.json
src/visprobe/config/presets/: adversarial.yaml  blur.yaml  comprehensive.yaml  corruption.yaml  custom_example.yaml  lighting.yaml  natural.yaml  realistic_attack.yaml  standard.yaml
src/visprobe/core/: __init__.py  normalization.py  search_engine.py  search_strategies.py
src/visprobe/data/: README.md  robustbench_cifar10_linf.json  robustbench_imagenet_linf.json
src/visprobe/presets/: __init__.py  loader.py  threat_models.py  validator.py
src/visprobe/properties/: __init__.py  base.py  classification.py  helpers.py
src/visprobe/strategies/: __init__.py  adversarial.py  base.py  blur.py  composition.py  image.py  lighting.py  noise.py  severity.py  spatial.py
src/visprobe/workflows/: README.md  __init__.py  metrics.py  severity_sweep.py
tests/: test_analysis.py  test_leaderboard.py  test_properties.py  test_severity_utilities.py  test_strategies.py  test_visprobe.py  test_workflows.py
visprobe/: __init__.py
visprobe/analysis/: __init__.py  confidence.py  visualization.py  vulnerability.py
