[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "visprobe"
version = "0.2.0"
description = "Find robustness failures in your vision models in 5 minutes"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Bilge Demirkaya"}
]
keywords = ["adversarial-robustness", "computer-vision", "deep-learning", "neural-networks", "pytorch", "testing", "fuzzing", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
    "Topic :: Security",
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.19.0,<2.0.0",
    "pillow>=8.0.0",
    "tqdm>=4.60.0",
    "pyyaml>=6.0.0",
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
    "pandas>=2.0.0",
    "scipy>=1.9.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
]

[project.optional-dependencies]
viz = [
    "altair>=4.2.0",
]
adversarial = [
    "adversarial-robustness-toolbox>=1.18.0",
]
bayesian = [
    "scipy>=1.9.0",
    "scikit-learn>=1.0.0",
]
validation = [
    "jsonschema>=4.0.0",
]

[project.scripts]
visprobe = "visprobe.cli.cli:main"

[project.urls]
Homepage = "https://github.com/bilgedemirkaya/VisProbe"
Repository = "https://github.com/bilgedemirkaya/VisProbe"
Issues = "https://github.com/bilgedemirkaya/VisProbe/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["visprobe*"]
exclude = ["tests*"]

# Black configuration
[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true

