[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "visprobe"
version = "2.0.0"
description = "Simple, production-ready compositional robustness testing for vision models"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Bilge Demirkaya", email = "your.email@example.com"}
]
maintainers = [
    {name = "Bilge Demirkaya", email = "your.email@example.com"}
]
keywords = [
    "adversarial-robustness",
    "computer-vision",
    "deep-learning",
    "robustness-testing",
    "pytorch",
    "autoattack",
    "compositional-testing"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
    "Topic :: Security",
    "Framework :: Pytest"
]
dependencies = [
    "torch>=1.10.0",
    "torchvision>=0.11.0",
    "numpy>=1.19.0,<2.0.0",
    "matplotlib>=3.3.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
autoattack = [
    "autoattack>=0.2.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=0.990",
    "build>=0.9.0",
    "twine>=4.0.0",
]
all = [
    "autoattack>=0.2.0",
]

[project.urls]
Homepage = "https://github.com/bilgedemirkaya/VisProbeRobustness"
Documentation = "https://github.com/bilgedemirkaya/VisProbeRobustness#readme"
Repository = "https://github.com/bilgedemirkaya/VisProbeRobustness.git"
Issues = "https://github.com/bilgedemirkaya/VisProbeRobustness/issues"
Changelog = "https://github.com/bilgedemirkaya/VisProbeRobustness/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["visprobe*"]
exclude = ["tests*"]

# Black configuration
[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true